Fri Mar 30 15:42:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* common/safewindows.h: Include xapian/error.h so
	  WinsockInitialiser can throw an exception.

Fri Mar 30 14:59:40 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* More code from Mark Hammond's patch
	* common/remoteconnection.h: Add explicit destructor and (for
	  windows compiles) a declare a helper method to calculate the
	  number of milliseconds until a timeout.
	* net/remoteconnection.cc: Implement windows versions for functions
	  which need it: constructor and destructor now do create and close
	  the overlapped IO stuff, read_at_least() and send_message() have
	  windows specific implementations.

Fri Mar 30 13:05:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* More code adapted from Mark Hammond's patch
	* common/safewindows.h: When remote databases are compiled in,
	  include the winsock stuff, and define some useful bits and pieces
	  for using it.
	* common/remoteconnection.h: Add a member to RemoteConnection on
	  windows to hold an overlapped IO structure.
	* net/progclient.cc: Don't include winsock stuff directly (it's now
	  brought in by "safewindows.h"), and don't include <sys/wait.h> on
	  windows.
	* net/remoteserver.cc: Ignore more SIGPIPE stuff on windows.

Fri Mar 30 12:37:15 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* Patch from Mark Hammond
	* backends/dbfactory_remote.cc: Ignore code to handle SIGPIPE on
	  windows, where it doesn't exist.
	* backends/remote/remote-database.cc: Raise UnimplementedError on
	  windows if a progclient backend is requested.

Fri Mar 30 12:11:50 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/harness/testsuite.cc: Fix srcdir guessing on windows - 
	  search for windows style directory separators, and remove .exe
	  suffix from executable name.  Adapted from Mark Hammond's patch.

Thu Mar 29 18:32:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>
