@@ -1,3 +1,9 @@
+Fri Mar 30 15:52:57 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* tests/harness/backendmanager.cc: Patch from Mark Hammond:
+	  implement launcher for tcpserver, so that remotetcp tests can run
+	  on windows.
+
 Fri Mar 30 15:42:49 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* common/safewindows.h: Include xapian/error.h so
